# ld38-vegicide

./: .gitignore  Makefile  Makefile.common  Makefile.gnulinux  Makefile.pandora  README  ecs.h  game-ideas.md  graphics.cpp  graphics.h  json-check.py  key-log-binner.lua  launch-arch.sh  launch-pandora.sh  launch.sh  ldjam.md  main.cpp  map-binner.lua  mesh-binder.cpp  mesh-binder.h  prns.h  shader-binder.cpp  shader-binder.h  shader.frag  shader.vert  square.iqm  texture-binder.h  todo.txt  vegicide.pro
depends/colorado/: CHANGELOG.md  CMakeLists.txt  aabb.cpp  attribute-enabler.cpp  audio-mixer.cpp  colorado-host-pandora.pro  colorado-host.pro  colorado-lua.pri  colorado-shared-arch.pro  colorado-shared-debian.pro  colorado-shared-pandora.pro  colorado-shared-windows.pro  colorado-shared.pri  colorado.pri  fixed-timestep.cpp  game.cpp  gl-buffer.cpp  gl-error.cpp  gl-shader.cpp  gl.cpp  image-to-texture.cpp  lua_export.py  mesh.cpp  node-renderer.cpp  particle-element.cpp  particle-node.cpp  plane.cpp  read-file.cpp  screen-options.cpp  sky-box.cpp  triangle-optimizer.cpp  triangle-shader.cpp  ui-vbo-node.cpp  vbo-element.cpp  vbo.cpp
depends/colorado/cdefs/: colorado-audio.lua  colorado-game.lua  colorado-video-encoder.lua  glee2.cdef  physfs.lua  sdl-mixer.lua  sdl.lua
depends/colorado/colorado/: aabb.h  attribute-enabler.h  audio-mixer.h  camera.h  dllspec.h  fixed-timestep.h  game-lua.h  game.h  gl-buffer.h  gl-error.h  gl-shader.h  gl.h  image-to-texture.h  jet-exhaust.h  lua-5.1-helper.h  lua-state.h  mesh-binder.h  mesh.h  node-renderer.h  node.h  obj-loader.h  particle-element.h  particle-node.h  plane.h  read-file.h  screen-options.h  sky-box.h  sub-node.h  triangle-optimizer.h  triangle-shader.h  ui-vbo-element.h  ui-vbo-node.h  vbo-element.h  vbo-node.h  vbo.h
depends/colorado/font-maker/: baked-chars.lua  build.sh  font-maker.lua
depends/colorado/scripts/: edge-split.lua  export-model.lua  make-rom.sh  vertex-checker.lua
depends/colorado/shaders/: normal-debug.fs  particle.fs  (+8 more)
(+142 files in other folders)
